--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -22,7 +22,7 @@ jobs:
                   password: ${{ secrets.STAGING_SFTP_PASS }}
                   protocol: sftp
                   port: 22
-                  localDir: ./
-                  remoteDir: /${{ secrets.STAGING_SFTP_DIR }}
+                  local-dir: ./
+                  server-dir: /${{ secrets.STAGING_SFTP_DIR }}
                   dangerous-clean-slate: true
                   exclude: .git,node_modules,vendor,*.map,*.log,*.md,*.txt,*.json,*.yml,*.yaml,*.xml,*.zip,*.tar.gz,*.tgz,*.bak,*.swp,*.DS_Store,.env,.env.local,.env.development,.env.production,.env.staging
