--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -22,5 +22,4 @@ jobs:
           port: 22
           localDir: "."
           remoteDir: ${{ secrets.SFTP_REMOTE_DIR }}
-          options: '--delete --verbose --only-newer --no-empty-dirs --parallel=1 --exclude .git* --exclude .github/'
-
+          options: '--delete --verbose --only-newer --no-empty-dirs --parallel=1 --exclude .git --exclude .github --exclude .gitignore --reverse'
