--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,17 @@
 {
 	"require": {
-		"symfony/var-dumper": "^7.2"
+		"symfony/var-dumper": "^7.2",
+		"wpengine/advanced-custom-fields-pro": "^6.4"
+	},
+	"repositories": [
+		{
+			"type": "composer",
+			"url": "https://connect.advancedcustomfields.com"
+		}
+	],
+	"config": {
+		"allow-plugins": {
+			"composer/installers": true
+		}
 	}
 }
