--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -1,4 +1,4 @@
-name: Deploy to Staging (FTP)
+name: Deploy to Staging
 
 on:
     push:
@@ -8,22 +8,23 @@ on:
 jobs:
     ftp-deploy:
         runs-on: ubuntu-latest
+        environment: staging
         steps:
             - name: Checkout code
-              uses: actions/checkout@v3
+              uses: actions/checkout@v4
 
-            # 1) Push root files (README.md, composer.json, .gitignore, etc)
             - name: Deploy Root Files
-              uses: SamKirkland/FTP-Deploy-Action@4.3.0
+              uses: SamKirkland/FTP-Deploy-Action@v4.3.5
               with:
-                  server: ${{ secrets.STAGING_FTP_HOST }}
-                  port: ${{ secrets.STAGING_FTP_PORT }}
-                  protocol: ftp # "ftp" or "ftps"
-                  username: ${{ secrets.STAGING_FTP_USER }}
-                  password: ${{ secrets.STAGING_FTP_PASSWORD }}
+                  server: ${{ secrets.FTP_HOST }}
+                  port: ${{ secrets.FTP_PORT }}
+                  protocol: ${{ secrets.FTP_PROTOCOL }}
+                  username: ${{ secrets.FTP_USER }}
+                  password: ${{ secrets.FTP_PASSWORD }}
                   local-dir: ./
-                  server-dir: ${{ secrets.STAGING_FTP_SERVER_DIR }}
-                  # exclude everything under wp-content (we do that in the next steps)
+                  server-dir: ${{ secrets.FTP_SERVER_DIR }}
+                  timeout: 60000
+                  security: strict
                   exclude: |
                       wp-content/**
                       .git/**
@@ -31,21 +32,21 @@ jobs:
                       node_modules/**
                       vendor/**
 
-            # 2) Push only your theme
             - name: Deploy Theme
-              uses: SamKirkland/FTP-Deploy-Action@4.3.0
+              uses: SamKirkland/FTP-Deploy-Action@v4.3.5
               with:
                   server: ${{ secrets.FTP_HOST }}
                   port: ${{ secrets.FTP_PORT }}
                   protocol: ${{ secrets.FTP_PROTOCOL }}
                   username: ${{ secrets.FTP_USER }}
                   password: ${{ secrets.FTP_PASSWORD }}
-                  local-dir: wp-content/themes/wp-boilerplate-fse/
-                  server-dir: ${{ secrets.FTP_SERVER_DIR }}/wp-content/themes/wp-boilerplate-fse/
+                  local-dir: wp-content/themes/theme-fse/
+                  server-dir: ${{ secrets.FTP_SERVER_DIR }}/wp-content/themes/theme-fse/
+                  timeout: 60000
+                  security: strict
 
-            # 3) Push all plugins
             - name: Deploy Plugins
-              uses: SamKirkland/FTP-Deploy-Action@4.3.0
+              uses: SamKirkland/FTP-Deploy-Action@v4.3.5
               with:
                   server: ${{ secrets.FTP_HOST }}
                   port: ${{ secrets.FTP_PORT }}
@@ -54,3 +55,52 @@ jobs:
                   password: ${{ secrets.FTP_PASSWORD }}
                   local-dir: wp-content/plugins/
                   server-dir: ${{ secrets.FTP_SERVER_DIR }}/wp-content/plugins/
+                  timeout: 60000
+                  security: strict
+                  exclude: |
+                      node_modules/**
+                      vendor/**
+                      *.log
+                      .DS_Store
+                      Thumbs.db
+                      *.sql
+
+            # Post-deployment health check
+            - name: Health Check
+              if: success()
+              run: |
+                  echo "🏥 Performing health check..."
+                  if [ -n "${{ vars.STAGING_URL }}" ]; then
+                      response=$(curl -s -o /dev/null -w "%{http_code}" "${{ vars.STAGING_URL }}" || echo "000")
+                      if [ "$response" = "200" ]; then
+                          echo "✅ Health check passed - Site is responding (HTTP $response)"
+                      else
+                          echo "⚠️ Health check warning - Site returned HTTP $response"
+                      fi
+                  else
+                      echo "⚠️ No staging URL configured for health check"
+                  fi
+
+            # Deployment summary
+            - name: Deployment Summary
+              if: always()
+              run: |
+                  echo "📊 Deployment Summary"
+                  echo "=================="
+                  echo "Environment: ${{ env.DEPLOYMENT_ENVIRONMENT }}"
+                  echo "Status: ${{ job.status }}"
+                  echo "Commit: ${{ steps.deploy-info.outputs.commit_short }}"
+                  echo "Branch: ${{ steps.deploy-info.outputs.branch }}"
+                  echo "Triggered by: ${{ github.actor }}"
+                  echo "Started: ${{ steps.deploy-info.outputs.timestamp }}"
+                  echo "Completed: $(date -u +%Y%m%d-%H%M%S)"
+
+                  if [ "${{ job.status }}" = "success" ]; then
+                      echo "✅ Staging deployment completed successfully!"
+                      if [ -n "${{ vars.STAGING_URL }}" ]; then
+                          echo "🌐 Site URL: ${{ vars.STAGING_URL }}"
+                      fi
+                  else
+                      echo "❌ Staging deployment failed!"
+                      echo "Check the logs above for detailed error information."
+                  fi
