feat: Added blocks plugin boilerplate and updated setup.sh to rename the plugin along with the theme name

--- a/.gitignore
+++ b/.gitignore
@@ -79,7 +79,11 @@ wp-content/debug.log
 # PLUGINS
 # =========================
 wp-content/plugins/
-!wp-content/plugins/.gitkeep
+
+# =========================
+# MU-PLUGINS
+# =========================
+!wp-content/mu-plugins/theme-name-blocks/
 
 # =========================
 # THEME
